--- a/MATA.Presentation.Web/Views/Projects/Details.cshtml
+++ b/MATA.Presentation.Web/Views/Projects/Details.cshtml
@@ -32,6 +32,14 @@
                         </dd>
 
                         <dt>
+                            @Html.DisplayNameFor(model => model.CountryName)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.CountryName)
+                        </dd>
+
+                        <dt>
                             @Html.DisplayNameFor(model => model.Remarks)
                         </dt>
 
