--- a/MATA.Presentation.Web/Views/Projects/_Edit.cshtml
+++ b/MATA.Presentation.Web/Views/Projects/_Edit.cshtml
@@ -19,6 +19,14 @@
             @Html.HiddenFor(model => model.ID)
 
             <div class="form-group">
+                @Html.LabelFor(model => model.CountryID, htmlAttributes: new { @class = "control-label col-sm-4" })
+                <div class="col-sm-8">
+                    @Html.DropDownListFor(model => model.CountryID, SelectHelper.GetCountryList(), htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CountryID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 @Html.LabelFor(model => model.ProjectName, htmlAttributes: new { @class = "control-label col-sm-4" })
                 <div class="col-sm-8">
                     @Html.EditorFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control" } })
@@ -33,54 +41,6 @@
                     @Html.ValidationMessageFor(model => model.Remarks, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.CreatedByAccountID, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.CreatedByAccountID, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CreatedByAccountID, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CreatedBy, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CreateTime, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.CreateTime, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CreateTime, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UpdatedByAccountID, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.UpdatedByAccountID, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.UpdatedByAccountID, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UpdatedBy, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.UpdatedBy, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.UpdatedBy, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UpdateTime, htmlAttributes: new { @class = "control-label col-sm-4" })
-                    <div class="col-sm-8">
-                        @Html.EditorFor(model => model.UpdateTime, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.UpdateTime, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
 
         </div>
 
