--- a/MATA.Presentation.Web/Views/Stores/_Create.cshtml
+++ b/MATA.Presentation.Web/Views/Stores/_Create.cshtml
@@ -15,14 +15,6 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StoreName, htmlAttributes: new { @class = "control-label col-sm-4" })
-            <div class="col-sm-8">
-                @Html.EditorFor(model => model.StoreName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StoreName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.ProjectID, htmlAttributes: new { @class = "control-label col-sm-4" })
             <div class="col-sm-8">
                 @Html.DropDownListFor(model => model.ProjectID, SelectHelper.GetProjectList(Model.ProjectID), new { @class = "form-control" })
@@ -32,19 +24,27 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-4" })
+            @Html.LabelFor(model => model.CityID, htmlAttributes: new { @class = "control-label col-sm-4" })
             <div class="col-sm-8">
-                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.CityID, SelectHelper.GetCityList(Model.CityID), new { @class = "form-control" })
+                @*@Html.EditorFor(model => model.CityID, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.ValidationMessageFor(model => model.CityID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CityID, htmlAttributes: new { @class = "control-label col-sm-4" })
+            @Html.LabelFor(model => model.StoreName, htmlAttributes: new { @class = "control-label col-sm-4" })
             <div class="col-sm-8">
-                @Html.DropDownListFor(model => model.CityID, SelectHelper.GetCityList(Model.CityID), new { htmlAttributes = new { @class = "form-control" } })
-                @*@Html.EditorFor(model => model.CityID, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.ValidationMessageFor(model => model.CityID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.StoreName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.StoreName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-8">
+                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
             </div>
         </div>
 
