--- a/MATA.Presentation.Web/Views/Accounts/Details.cshtml
+++ b/MATA.Presentation.Web/Views/Accounts/Details.cshtml
@@ -73,18 +73,9 @@
 
     <script type="text/javascript">
 
-        $(function () {
-
-            $('.mt-partial-view-container').each(function () {
-
-                let $this = $(this),
-                    url = $this.attr('data-url');
-
-                $this.load(url);
-
-            });
-
-        });
+        window.onload = function () {
+            MATA.Utils.initPartialViewContainers();
+        }
 
     </script>
 
