--- a/MATA.Presentation.Web/Views/Accounts/_StoreAccounts.cshtml
+++ b/MATA.Presentation.Web/Views/Accounts/_StoreAccounts.cshtml
@@ -1,5 +1,10 @@
 ﻿@model MATA.Presentation.Web.Models.Accounts.AccountsIndexVM
 
+<h4>
+    Hesaplar (@Model.TotalCount)
+</h4>
+<hr />
+
 @if (Model.TotalCount == 0)
 {
     @:Bu şantiyeye atanmış hesap bulunmamaktadır
