--- a/MATA.Presentation.Web/Views/Countries/Details.cshtml
+++ b/MATA.Presentation.Web/Views/Countries/Details.cshtml
@@ -8,6 +8,7 @@
 <h2>@Model.CountryName</h2>
 
 <div class="row">
+
     <div class="col-sm-4">
 
         <div class="panel panel-default">
@@ -69,53 +70,11 @@
 
     <div class="col-sm-8">
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h4>
-                    Şehirler
-                    @if (User.IsInRole(RoleTypes.Admin))
-                    {
-                        <a href="@Url.Action("_Create", "Cities")" id="mt-link-stores-create" class="pull-right">
-                            <span class="glyphicon glyphicon-plus"></span>
-                        </a>
-                    }
-                </h4>
-                <hr />
-                @Html.PartialViewContainer(Url.Action("_CountryCities", "Cities", new { countryID = Model.ID, page = 1 }))
-            </div>
-        </div>
+        @Html.PartialViewContainer(Url.Action("_CountryCities", "Cities", new { countryID = Model.ID, page = 1 }))
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h4>
-                    Şantiyeler
-                    @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
-                    {
-                        <a href="@Url.Action("_Create", "Stores")" id="mt-link-stores-create" class="pull-right">
-                            <span class="glyphicon glyphicon-plus"></span>
-                        </a>
-                    }
-                </h4>
-                <hr />
-                @Html.PartialViewContainer(Url.Action("_CountryStores", "Stores", new { countryID = Model.ID, page = 1 }))
-            </div>
-        </div>
+        @Html.PartialViewContainer(Url.Action("_CountryStores", "Stores", new { countryID = Model.ID, page = 1 }))
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h4>
-                    İşler
-                    @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
-                    {
-                        <a href="@Url.Action("_Create", "Issues")" id="mt-link-issues-create" class="pull-right">
-                            <span class="glyphicon glyphicon-plus"></span>
-                        </a>
-                    }
-                </h4>
-                <hr />
-                @Html.PartialViewContainer(Url.Action("_CountryIssues", "Issues", new { countryID = Model.ID, page = 1 }))
-            </div>
-        </div>
+        @Html.PartialViewContainer(Url.Action("_CountryIssues", "Issues", new { countryID = Model.ID, page = 1 }))
 
     </div>
 </div>
@@ -128,18 +87,9 @@
 
     <script type="text/javascript">
 
-        $(function () {
-
-            $('.mt-partial-view-container').each(function () {
-
-                var $this = $(this),
-                    url = $this.attr('data-url');
-
-                $this.load(url);
-
-            });
-
-        });
+        window.onload = function () {
+            MATA.Utils.initPartialViewContainers();
+        }
 
     </script>
 
