--- a/MATA.Presentation.Web/Views/Attachments/_ProjectAttachments.cshtml
+++ b/MATA.Presentation.Web/Views/Attachments/_ProjectAttachments.cshtml
@@ -4,7 +4,7 @@
     Dosyalar (@Model.TotalCount)
     @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
     {
-        <a href="@Url.Action("_Create", "Attachments", new { entityName = "Store", entityID = ViewBag.StoreID })" id="mt-link-attachments-create" class="pull-right">
+        <a href="@Url.Action("_Create", "Attachments", new { entityName = "Project", entityID = ViewBag.ProjectID })" id="mt-link-attachments-create" class="pull-right">
             <span class="glyphicon glyphicon-plus"></span>
         </a>
     }
@@ -13,7 +13,7 @@
 
 @if (Model.TotalCount == 0)
 {
-    @:Bu şantiyeye ait dosya bulunmamaktadır
+    @:Bu projeye ait dosya bulunmamaktadır
 }
 else
 {
