--- a/MATA.Presentation.Web/Views/Issues/_CountryIssues.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/_CountryIssues.cshtml
@@ -1,6 +1,17 @@
 ﻿
 @model MATA.Presentation.Web.Models.Issues.IssuesIndexVM
 
+<h4>
+    İşler (@Model.TotalCount)
+    @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
+    {
+        <a href="@Url.Action("_Create", "Issues", new { countryID = ViewBag.CountryID })" id="mt-link-issues-create" class="pull-right">
+            <span class="glyphicon glyphicon-plus"></span>
+        </a>
+    }
+</h4>
+<hr />
+
 @if (Model.TotalCount == 0)
 {
     @:Bu ülkeye ait iş bulunmamaktadır
@@ -16,34 +27,34 @@ else
     grid.Bind(Model.Issues, autoSortAndPage: false, rowCount: Model.TotalCount);
 
     var columnList = new List<WebGridColumn>()
-    {
-        new WebGridColumn
-        {
-            Header = "İş Tanımı",
-            ColumnName = "Description",
-            CanSort = false
-        },
-        new WebGridColumn
-        {
-            Header = "Şantiye Adı",
-            ColumnName = "StoreName",
-            CanSort = false,
-            //Style = "width: 300px"
-        },
-        new WebGridColumn
-        {
-            Header = "Açıklamalar",
-            ColumnName = "Remarks",
-            CanSort = false
-        }
-    };
+{
+new WebGridColumn
+{
+Header = "İş Tanımı",
+ColumnName = "Description",
+CanSort = false
+},
+new WebGridColumn
+{
+Header = "Şantiye Adı",
+ColumnName = "StoreName",
+CanSort = false,
+//Style = "width: 300px"
+},
+new WebGridColumn
+{
+Header = "Açıklamalar",
+ColumnName = "Remarks",
+CanSort = false
+}
+};
 
     if (User.IsInRole(RoleTypes.Admin))
     {
         this.AddAuditColumns(columnList);
     }
 
-    if(User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
+    if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
     {
         columnList.Add(new WebGridColumn
         {
