--- a/MATA.Presentation.Web/Views/Issues/_ProjectIssues.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/_ProjectIssues.cshtml
@@ -1,5 +1,15 @@
-﻿
-@model MATA.Presentation.Web.Models.Issues.IssuesIndexVM
+﻿@model MATA.Presentation.Web.Models.Issues.IssuesIndexVM
+
+<h4>
+    İşler (@Model.TotalCount)
+    @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
+    {
+        <a href="@Url.Action("_Create", "Issues", new { projectID = ViewBag.ProjectID })" id="mt-link-issues-create" class="pull-right">
+            <span class="glyphicon glyphicon-plus"></span>
+        </a>
+    }
+</h4>
+<hr />
 
 @if (Model.TotalCount == 0)
 {
@@ -16,27 +26,27 @@ else
     grid.Bind(Model.Issues, autoSortAndPage: false, rowCount: Model.TotalCount);
 
     var columnList = new List<WebGridColumn>()
-    {
-        new WebGridColumn
-        {
-            Header = "İş Tanımı",
-            ColumnName = "Description",
-            CanSort = false
-        },
-        new WebGridColumn
-        {
-            Header = "Şantiye Adı",
-            ColumnName = "StoreName",
-            CanSort = false,
-            //Style = "width: 300px"
-        },
-        new WebGridColumn
-        {
-            Header = "Açıklamalar",
-            ColumnName = "Remarks",
-            CanSort = false
-        }
-    };
+{
+new WebGridColumn
+{
+Header = "İş Tanımı",
+ColumnName = "Description",
+CanSort = false
+},
+new WebGridColumn
+{
+Header = "Şantiye Adı",
+ColumnName = "StoreName",
+CanSort = false,
+//Style = "width: 300px"
+},
+new WebGridColumn
+{
+Header = "Açıklamalar",
+ColumnName = "Remarks",
+CanSort = false
+}
+};
 
     if (User.IsInRole(RoleTypes.Admin))
     {
