Country & City Projects

--- a/MATA.Presentation.Web/Views/Accounts/_ForgotPassword.cshtml
+++ b/MATA.Presentation.Web/Views/Accounts/_ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MATA.Presentation.Web.Models.Accounts.AccountForgotPasswordViewModel
+﻿@model MATA.Presentation.Web.Models.Accounts.ForgotPasswordViewModel
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
