--- a/MATA.Presentation.Web/Views/Attachments/_IssueAttachments.cshtml
+++ b/MATA.Presentation.Web/Views/Attachments/_IssueAttachments.cshtml
@@ -23,7 +23,7 @@ else
         ajaxUpdateCallback: "attachmentsController.initGridEvents"
     );
 
-    grid.Bind(Model.Attachments, autoSortAndPage: false, rowCount: Model.PageSize);
+    grid.Bind(Model.Attachments, autoSortAndPage: false, rowCount: Model.TotalCount);
 
     var columnList = new List<WebGridColumn>()
 {
