--- a/MATA.Presentation.Web/Views/Shared/_CountrySelect.cshtml
+++ b/MATA.Presentation.Web/Views/Shared/_CountrySelect.cshtml
@@ -16,7 +16,8 @@
             data_select = string.Empty,
             data_url = Url.Action("Search", "Countries"),
             data_text_field = "CountryName",
-            data_value_field = "ID"
+            data_value_field = "ID",
+            data_value = Model.SelectValue
         })
 
     </div>
