--- a/MATA.Presentation.Web/Views/Issues/_ProjectIssues.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/_ProjectIssues.cshtml
@@ -27,6 +27,7 @@ else
 
     var columnList = new List<WebGridColumn>()
 {
+        Html.LocalizedDetailsActionLinkColumn("SeqNo", "ID", "Issues"),
 new WebGridColumn
 {
 Header = "İş Tanımı",
