--- a/MATA.Presentation.Web/Views/Accounts/Login.cshtml
+++ b/MATA.Presentation.Web/Views/Accounts/Login.cshtml
@@ -82,6 +82,24 @@
 
         $(function () {
 
+            $.validator.setDefaults({
+                highlight: function (element) {
+                    $(element).closest('.form-group').addClass('has-error');
+                },
+                unhighlight: function (element) {
+                    $(element).closest('.form-group').removeClass('has-error');
+                },
+                errorElement: 'span',
+                errorClass: 'help-block',
+                errorPlacement: function (error, element) {
+                    if (element.parent('.input-group').length) {
+                        error.insertAfter(element.parent());
+                    } else {
+                        error.insertAfter(element);
+                    }
+                }
+            });
+
             $('#mt-link-accounts-forgot-password').click(function (e) {
                 e.preventDefault();
                 accountsController.openForgotPasswordModal();
