--- a/MATA.Presentation.Web/Views/Issues/Details.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Description - @Model.IssueState</h2>
+<h2>@Model.SeqNo - @Model.IssueState</h2>
 
 <div class="row">
 
@@ -24,6 +24,9 @@
                 </h4>
                 <hr />
                 <dl class="">
+
+                    <dt>@Html.DisplayNameFor(model => model.SeqNo)</dt>
+                    <dd>@Html.DisplayFor(model => model.SeqNo)</dd>
 
                     <dt>@Html.DisplayNameFor(model => model.Description)</dt>
                     <dd>@Html.DisplayFor(model => model.Description)</dd>
@@ -63,8 +66,6 @@
 </div>
 
 @section scripts{
-
-    @Scripts.Render("~/bundles/jqueryval")
 
     <script src="~/ts/mata.stores-controller.js"></script>
 
