--- a/MATA.Presentation.Web/Views/Issues/_StoreIssues.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/_StoreIssues.cshtml
@@ -28,6 +28,7 @@ else
 
     var columnList = new List<WebGridColumn>()
 {
+        Html.LocalizedDetailsActionLinkColumn("SeqNo", "ID", "Issues"),
 new WebGridColumn
 {
 Header = "İş Tanımı",
